[gd_scene load_steps=6 format=3 uid="uid://dt4tkww2mpq47"]

[ext_resource type="Texture2D" uid="uid://dy0c86pihjimm" path="res://assets/250x250_placeholder.png" id="1_gi6fs"]
[ext_resource type="Script" path="res://scripts/goose.gd" id="1_tmdv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4ktt"]
size = Vector2(250, 250)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0sm0w"]
size = Vector2(250, 250)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0aj4y"]
size = Vector2(2000, 1500)

[node name="Goose" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_tmdv4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gi6fs")

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackCooldown" type="Timer" parent="AttackArea"]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_i4ktt")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0sm0w")

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("RectangleShape2D_0aj4y")
debug_color = Color(0.682353, 1, 0, 0.458824)

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-127, 125)
target_position = Vector2(0, 1)

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(126, 125)
target_position = Vector2(0, 1)

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
[connection signal="timeout" from="AttackArea/AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
